--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group "co.nvqa"
 version "1.0.0"
 apply plugin: "java"
 
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_1_8
 
 buildscript {
     repositories {
@@ -30,15 +30,17 @@ configurations {
 dependencies {
     agent "org.aspectj:aspectjweaver:1.9.2"
 
-    compile "com.google.inject:guice:4.2.0"
-    compile "io.cucumber:cucumber-guice:3.0.2"
-    compile "io.cucumber:cucumber-java:3.0.2"
-    compile "io.cucumber:cucumber-junit:3.0.2"
-    compile "io.github.bonigarcia:webdrivermanager:3.0.0"
-    compile "io.qameta.allure:allure-cucumber3-jvm:2.7.0"
-    compile "javax.xml.bind:jaxb-api:2.3.1"
-    compile "junit:junit:4.12"
-    compile "org.seleniumhq.selenium:selenium-java:3.14.0"
+    testImplementation "com.google.inject:guice:4.2.0"
+    testImplementation "io.cucumber:cucumber-guice:3.0.2"
+    testImplementation "io.cucumber:cucumber-java:3.0.2"
+    testImplementation "io.cucumber:cucumber-junit:3.0.2"
+    testImplementation "io.qameta.allure:allure-cucumber3-jvm:2.7.0"
+    testImplementation "org.seleniumhq.selenium:selenium-java:3.14.0"
+    testImplementation "io.github.bonigarcia:webdrivermanager:3.0.0"
+    testImplementation "io.rest-assured:rest-assured:3.2.0"
+    testImplementation "io.rest-assured:json-path:3.2.0"
+    testImplementation "javax.xml.bind:jaxb-api:2.3.1"
+    testImplementation "junit:junit:4.12"
 }
 
 apply plugin: 'io.qameta.allure'
