--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 
     testImplementation "javax.xml.bind:jaxb-api:2.3.1"
     testImplementation "junit:junit:4.12"
+
+    implementation "org.seleniumhq.selenium:selenium-java:3.141.59"
 }
 
 apply plugin: io.qameta.allure.gradle.AllurePlugin
@@ -66,15 +68,15 @@ task runCucumber(type: JavaExec) {
             "${sourceSets.test.output.resourcesDir}/features"
     ]
 
-    if(project.hasProperty("tags")) {
+    if (project.hasProperty("tags")) {
         def tags = project.getProperty("tags")
         args "--tags", tags
     }
 
-    if(project.hasProperty("useAllure")) {
+    if (project.hasProperty("useAllure")) {
         def useAllure = project.getProperty("useAllure")
 
-        if(useAllure) {
+        if (useAllure) {
             args "--plugin", "io.qameta.allure.cucumber4jvm.AllureCucumber4Jvm"
             jvmArgs "-javaagent:${configurations.agent.singleFile}"
             systemProperties["allure.results.directory"] = "build/allure-results"
